# django-react-app

./: .gitignore  .pypirc  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg
django_react_app/: package-lock.json  package.json  urls.py  views.py  webpack.config.js
django_react_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_react_app/src/: App.js  index.js
django_react_app/src/components/: Hello.js  Test.js
django_react_app/templates/: index.html
