[metadata]
name = django-react-app
version = 0.0.1
description = a react django app.
long_description = file: README.rst.
url = https://github.com/Mahmoud-Barry/django-react-app
author = Mahmoud Barry
author_email = mahmoudbarry@bakeli.tech
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 4.1 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
# install_requires =
#     Django >= X.Y  # Replace "X.Y" as appropriate